[package]
name = "aoc-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.38"
figment = { version = "0.10.19", features = ["env", "toml"] }
serde = { version = "1.0.215", features = ["derive"] }
ureq = "2.11.0"
regex = "1.11.1"
rayon = "1.10.0"
nonempty = "0.10.0"
itertools = "0.13.0"
